# Nombres-premiers-pthread

./: CMakeLists.txt  README.md  main.cpp  main.h
